##
## Process this file with automake to produce Makefile.in
##

AUTOMAKE_OPTIONS = no-dependencies

## Call additional Makefiles in child directories
SUBDIRS = ame clustalw2fasta centrimo common create-priors draw-mhmm dreme fasta-center fimo \
          gomo mast mcast meme mhmm mhmms mhmmscan motiph psp-gen qvalue scaffold spamo \
          tomtom web

DATAFILES = \
  adh.s \
  crp0.s \
  farntrans5.s \
  INO_up800.s \
  Jaspar-subset.meme \
  Klf1-200.s \
  Klf1-200-100.s \
  Klf1-200-100-shuffled.s \
  lex0.s \
  lipocalin.s \
  mini-drosoph.s \
  noq.s

EXTRA_DIST = $(DATAFILES)
