#####################################################################
## FILE: Makefile.am
# AUTHOR: James Johnson
# CREATE DATE: 2012
# PROJECT: 
# COPYRIGHT: 2012, UQ
#####################################################################

## Automake uses this file to generate a Makefile

# These files should be included with the distribution.
DATAFILES = DNaseHS_gm12878.wig priors.dist priors.wig

EXTRA_DIST = $(DATAFILES)
